# rust-svelte-chat-engine

./: .gitignore  Cargo.toml  build.rs
src/: api.rs  lib.rs  main.rs  token_manager.rs
src/api/: chat.rs  token.rs  websocket.rs
src/api/chat/: client.rs  engine.rs  room.rs
web/: TODO.md  package-lock.json  package.json
web/src/: App.svelte  ChatArea.svelte  Message.svelte  RoomsList.svelte  TextInput.svelte
web/src/lib/: client.js
