[package]
name = "chat-engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
futures-util = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
rand = "0.8.5"
http = "1.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
rust-embed = "8.3.0"
warp-embed = "0.5.0"

[build-dependencies]
npm_rs = "1.0.0"
